--- a/build.gradle
+++ b/build.gradle
@@ -88,6 +88,8 @@ dependencies {
     implementation "androidx.room:room-runtime:2.5.0"
     kapt "androidx.room:room-compiler:2.5.0"
     implementation "androidx.room:room-ktx:2.5.0"
+    annotationProcessor("androidx.room:room-compiler:2.5.0")
+
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
