--- a/build.gradle
+++ b/build.gradle
@@ -77,6 +77,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
 
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
     //Dagger - Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-android-compiler:2.37"
