--- a/build.gradle
+++ b/build.gradle
@@ -58,10 +58,22 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:1.3.3"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.3"
+    testImplementation 'com.google.truth:truth:1.0.1'
+    androidTestImplementation 'com.google.truth:truth:1.0.1'
+    // Mockito framework
+    testImplementation "org.mockito:mockito-core:3.9.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4'
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "org.mockito:mockito-inline:2.8.47"
+
+
     debugImplementation "androidx.compose.ui:ui-tooling:1.3.3"
 
     // Compose dependencies
@@ -92,7 +104,6 @@ dependencies {
     kapt "androidx.room:room-compiler:2.5.0"
     implementation "androidx.room:room-ktx:2.5.0"
     annotationProcessor("androidx.room:room-compiler:2.5.0")
-
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
